header and footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <p>My Logo</p>
+        </div>
+        <div>
+            <h1>Personal Training</h1>
+        </div>
+    </header>
+    <footer>
+        <div class="social-media">
+            <a href="http://"><img src="images/instagram.jpg" alt="link to instagram"></a>
+            <a href="http://"><img src="images/linkedin.jpg" alt="link to linkedin"></a>
+            <a href="http://"><img src="images/twitter.jpg" alt="link to twitter"></a>
+        </div>
+        <div class="contact-info">
+            <p>Mobile: <a href="tel:+614987546598">04987546598</a></p>
+            <p>Email: <a href="mailto:personaltraining@gmail.com">personaltraining@gmail.com</a></p>
+
+        </div>
+    </footer>
 </body>
 </html>
