added orange backgrounds and green borders

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="contact-info">
             <p>Mobile: <a href="tel:+614987546598">04987546598</a></p>
             <p>Email: <a href="mailto:personaltraining@gmail.com">personaltraining@gmail.com</a></p>
-
+            <p>All Rights Reserved</p>
         </div>
     </footer>
 </body>
