added media breakpoints

--- a/index.html
+++ b/index.html
@@ -1,29 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <p>My Logo</p>
-        </div>
-        <div>
-            <h1>Personal Training</h1>
-        </div>
+      <div class="logo">
+        <p>My Logo</p>
+      </div>
+      <div class="header-title">
+        <h1>Personal Training</h1>
+      </div>
     </header>
+    <div class="main">
+      <div class="training-options">
+        <img src="images/pilates.jpg" alt="pilates image" />
+        <p>Pilates</p>
+      </div>
+      <div class="training-options">
+        <img src="images/strength.jpg" alt="strength image" />
+        <p>Strength</p>
+      </div>
+      <div class="training-options">
+        <img src="images/yoga.jpg" alt="yoga image" />
+        <p>Yoga</p>
+      </div>
+    </div>
     <footer>
-        <div class="social-media">
-            <a href="http://"><img src="images/instagram.jpg" alt="link to instagram"></a>
-            <a href="http://"><img src="images/linkedin.jpg" alt="link to linkedin"></a>
-            <a href="http://"><img src="images/twitter.jpg" alt="link to twitter"></a>
-        </div>
-        <div class="contact-info">
-            <p>Mobile: <a href="tel:+614987546598">04987546598</a></p>
-            <p>Email: <a href="mailto:personaltraining@gmail.com">personaltraining@gmail.com</a></p>
-            <p>All Rights Reserved</p>
-        </div>
+      <div class="social-media">
+        <a href="http://"
+          ><img src="images/instagram.jpg" alt="link to instagram"
+        /></a>
+        <a href="http://"
+          ><img src="images/linkedin.jpg" alt="link to linkedin"
+        /></a>
+        <a href="http://"
+          ><img src="images/twitter.jpg" alt="link to twitter"
+        /></a>
+      </div>
+      <div class="contact-info">
+        <p>Mobile: <a href="tel:+614987546598">04987546598</a></p>
+        <p>
+          Email:
+          <a href="mailto:personaltraining@gmail.com"
+            >personaltraining@gmail.com</a
+          >
+        </p>
+        <p>All Rights Reserved</p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
